--- a/1612.html
+++ b/1612.html
@@ -202,7 +202,7 @@
             <div class="profile-img">👨‍💻</div>
             
             <h1>윤수빈</h1>
-            <p class="subtitle">풀스택 웹 개발자 | 디자이너</p>
+            <p class="subtitle">고등학생| 기자 희망</p>
             
             <p class="bio">
                 안녕하세요! 저는 서대전여고에 재학중인 윤수빈입니다! 모두들 화이팅 아자스!!🚀
@@ -285,6 +285,7 @@
 
 
 </html>
+
 
 
 
